syntax = "proto3";
package store;

message UniqueStorageValue {
    string value = 1;
    uint32 expiration = 2;
}

message MessageValue {
    enum OPERATION { CAS = 0; };
    OPERATION operation = 1;
    string key = 2;
    string value = 3;
    uint32 expiration = 4;
}

message UniqueStorage {
    map<string, UniqueStorageValue> items = 1;
}